# 1brc

./: .gitignore  Cargo.toml  README.md  allow_prof.sh  create_measurements.py
.cargo/: config.toml
src/: cli.rs  lib.rs  main.rs  v0.rs  v1.rs  v3.rs  vbatch.rs  vno_assert.rs
tests/: tests.rs
