[package]
name = "brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
fast-float = "0.2.0"
memmap = "0.7.0"
rayon = "1.10.0"
rustc-hash = "2.0.0"


[profile.release]
lto = "fat"
codegen-units = 1
debug = true
