[package]
name = "brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13.0"
memmap = "0.7.0"
nohash-hasher = "0.2.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rustc-hash = "2.0.0"


[profile.release]
lto = "fat"
codegen-units = 1
debug = true
